--- a/03-bug_tracking_in_R.Rmd
+++ b/03-bug_tracking_in_R.Rmd
@@ -34,6 +34,48 @@ When you are in doubt that there is a bug: (which should be the case most of the
 
 4. If some function is working, but it is not defined in the best generalised way, then consult someone to look over the code. This may perhaps not be a bug; instead, it might be an alternative way of writing the function.
 
+## Introduction to Bugzilla
+
+Base R uses [Bugzilla](https://bugs.r-project.org/) for issue tracking and reporting bugs. 
+
+### Navigating Bugzilla {#Bugzilla}
+
+An image of the existing home page of Bugzilla is shared below:
+
+![Screenshot of the existing home page of Bugzilla.](img/bugzilla.png)
+
+On the home page of Bugzilla, there are various buttons and links. There are four square buttons called as:
+
+![Screenshot of the four square buttons on the home page of Bugzilla.](img/squarebuttons.png)
+
+1. [File a bug](https://bugs.r-project.org/enter_bug.cgi): You will have to log in to Bugzilla to file a bug using this button
+
+2. [Search](https://bugs.r-project.org/query.cgi): When you click this button you will get a page with 'Simple Search' and 'Advanced Search' options. Either of the search options could be used depending on what you are looking for.
+
+3. [Log In](https://bugs.r-project.org/?GoAheadAndLogIn=1): Provide the appropriate email address and password here to log in to Bugzilla.
+
+4. [Documentation](https://bugzilla.readthedocs.io/en/latest/using/index.html): Provides a user guide for R\'s Bugzilla.
+
+Several useful shortcuts are available from the landing page:
+
+1. [Enter a new bug report](https://bugs.r-project.org/enter_bug.cgi)
+
+2. [Show open bugs new-to-old](https://bugs.r-project.org/buglist.cgi?bug_file_loc_type=allwordssubstr&bug_status=NEW&bug_status=ASSIGNED&bug_status=CONFIRMED&bug_status=REOPENED&bug_status=UNCONFIRMED&bugidtype=include&chfieldto=Now&cmdtype=doit&emailassigned_to1=1&emailassigned_to2=1&emailcc2=1&emailreporter2=1&emailtype1=substring&emailtype2=substring&field0-0-0=noop&long_desc_type=substring&order=bugs.delta_ts%20desc&query_format=advanced&short_desc_type=allwordssubstr&type0-0-0=noop)
+
+3. [Search existing bug reports](https://bugs.r-project.org/query.cgi)
+
+A [quick search](https://bugs.r-project.org/page.cgi?id=quicksearch.html) bar is available on the home page where you can enter a bug number to search or some search terms.
+
+![Screenshot of the quick search bar on the home page of Bugzilla.](img/quicksearch.png)
+
+There is also a section for Common Queries on the home page which includes links to bugs reported and changed in the last 24 hours and last 7 days.
+
+![Screenshot of the Common Queries section on the home page of Bugzilla.](img/commonquery.png)
+
+### How to get a Bugzilla account {#bugzilla-account}
+
+To get a Bugzilla account send an e-mail to `bug-report-request@r-project.org` from the address you want to use as your Bugzilla login. Briefly explain why you want a Bugzilla account and a volunteer will add you to R's Bugzilla members. After having successfully logged in to Bugzilla, you are good to go.
+
 ## Checking if a bug is already reported
 
 The first step before filing a bug report is to see whether the problem has already been reported. Checking if the bug is reported will:
@@ -74,7 +116,7 @@ Once you confirm a bug exists, you need to submit a bug report so that it gets f
 
 2. The bug report for R-Core supported packages, their documentations, and/ or a bug report for the R language itself can be submitted either to R-devel, [see posting guide](https://www.r-project.org/posting-guide.html#which_list), or to [Bugzilla](https://bugs.r-project.org/bugzilla/). In the future, we hope to have an option to report an issue to the [GitHub Mirror of the R svn server](https://github.com/r-devel/r-svn/issues).
 
-3. If you want to submit the bug report using [Bugzilla](#Bugzilla), please ensure that you have a Bugzilla account. To get a Bugzilla account, please send an e-mail to `bug-report-request@r-project.org` from the address that you want to use as your login. In this e-mail, briefly explain why you need an account. A volunteer shall then create a Bugzilla account and add you to R's Bugzilla members.
+3. In order to report bugs, as well as fixes, using [Bugzilla](#Bugzilla), please ensure that you have a [Bugzilla account](#bugzilla-account).
 
 4. Please ensure whether the bug is already fixed (in the upcoming changes in R) or reported (search for it from those already reported on Bugzilla, either on [search existing bug reports](https://bugs.r-project.org/bugzilla/query.cgi), using the [advanced search](https://bugs.r-project.org/bugzilla/query.cgi?format=advanced) option here, or [show open bugs new-to-old](https://bugs.r-project.org/bugzilla/buglist.cgi?bug_file_loc_type=allwordssubstr&bug_status=NEW&bug_status=ASSIGNED&bug_status=CONFIRMED&bug_status=REOPENED&bug_status=UNCONFIRMED&bugidtype=include&chfieldto=Now&cmdtype=doit&emailassigned_to1=1&emailassigned_to2=1&emailcc2=1&emailreporter2=1&emailtype1=substring&emailtype2=substring&field0-0-0=noop&long_desc_type=substring&order=bugs.delta_ts%20desc&query_format=advanced&short_desc_type=allwordssubstr&type0-0-0=noop)).
 
