--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-05-19}
+\date{2023-05-24}
 
 \begin{document}
 \maketitle
@@ -772,71 +772,10 @@ After understanding where bugs are reported in R (Bugzilla) or in other projects
 
 Around the clock, new bug reports are being submitted on Bugzilla or the bug trackers (for instance, GitHub issues) of R packages and existing bug reports are being updated. Every bug report needs to be reviewed to make sure various things are in proper order. You can help with this process of reviewing bugs.
 
-\hypertarget{Bugzilla}{%
-\section{Navigating Bugzilla}\label{Bugzilla}}
-
-Base R uses \href{https://bugs.r-project.org/}{Bugzilla} for issue tracking. In order to report bugs, as well as fixes, you will first need to create an \protect\hyperlink{RCorePkgBug}{account} on Bugzilla. After having successfully logged in to Bugzilla, you are good to go.
-
-An image of the existing home page of Bugzilla is shared below:
-
-\begin{figure}
-\centering
-\includegraphics{img/bugzilla.png}
-\caption{Screenshot of the existing home page of Bugzilla.}
-\end{figure}
-
-On the home page of Bugzilla, there are various buttons and links. There are four square buttons called as:
-
-\begin{figure}
-\centering
-\includegraphics{img/squarebuttons.png}
-\caption{Screenshot of the four square buttons on the home page of Bugzilla.}
-\end{figure}
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\item
-  \href{https://bugs.r-project.org/enter_bug.cgi}{File a bug}: You will have to log in to Bugzilla to file a bug using this button
-\item
-  \href{https://bugs.r-project.org/query.cgi}{Search}: When you click this button you will get a page with `Simple Search' and `Advanced Search' options. Either of the search options could be used depending on what you are looking for.
-\item
-  \href{https://bugs.r-project.org/?GoAheadAndLogIn=1}{Log In}: Provide the appropriate email address and password here to log in to Bugzilla.
-\item
-  \href{https://bugzilla.readthedocs.io/en/latest/using/index.html}{Documentation}: Provides a user guide for R\textquotesingle s Bugzilla.
-\end{enumerate}
-
-Several useful shortcuts are available from the landing page:
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\item
-  \href{https://bugs.r-project.org/enter_bug.cgi}{Enter a new bug report}
-\item
-  \href{https://bugs.r-project.org/buglist.cgi?bug_file_loc_type=allwordssubstr\&bug_status=NEW\&bug_status=ASSIGNED\&bug_status=CONFIRMED\&bug_status=REOPENED\&bug_status=UNCONFIRMED\&bugidtype=include\&chfieldto=Now\&cmdtype=doit\&emailassigned_to1=1\&emailassigned_to2=1\&emailcc2=1\&emailreporter2=1\&emailtype1=substring\&emailtype2=substring\&field0-0-0=noop\&long_desc_type=substring\&order=bugs.delta_ts\%20desc\&query_format=advanced\&short_desc_type=allwordssubstr\&type0-0-0=noop}{Show open bugs new-to-old}
-\item
-  \href{https://bugs.r-project.org/query.cgi}{Search existing bug reports}
-\end{enumerate}
-
-A \href{https://bugs.r-project.org/page.cgi?id=quicksearch.html}{quick search} bar is available on the home page where you can enter a bug number to search or some search terms.
-
-\begin{figure}
-\centering
-\includegraphics{img/quicksearch.png}
-\caption{Screenshot of the quick search bar on the home page of Bugzilla.}
-\end{figure}
-
-There is also a section for Common Queries on the home page which includes links to bugs reported and changed in the last 24 hours and last 7 days.
-
-\begin{figure}
-\centering
-\includegraphics{img/commonquery.png}
-\caption{Screenshot of the Common Queries section on the home page of Bugzilla.}
-\end{figure}
-
 \hypertarget{preparing-to-review-bug-reports}{%
 \subsection{Preparing to review bug reports}\label{preparing-to-review-bug-reports}}
 
-If you want to review bug reports on Bugzilla, you are required to have a Bugzilla account. To get a Bugzilla account send an e-mail to \texttt{bug-report-request@r-project.org} from the address you want to use as your Bugzilla login. Briefly explain why you want a Bugzilla account and a volunteer will add you to R's Bugzilla members. More details on how you can review a bug report are available on this \href{https://blog.r-project.org/2019/10/09/r-can-use-your-help-reviewing-bug-reports/index.html}{blog}
+If you want to review bug reports on Bugzilla, you are required to have a \protect\hyperlink{bugzilla-account}{Bugzilla account}. More details on how you can review a bug report are available on this post on the R Blog: \href{https://blog.r-project.org/2019/10/09/r-can-use-your-help-reviewing-bug-reports/index.html}{R Can Use Your Help: Reviewing Bug Reports}
 
 \hypertarget{classifying-bug-reports}{%
 \section{Classifying bug reports}\label{classifying-bug-reports}}
