--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -1206,25 +1206,18 @@ It may take longer before your patch is accepted and applied or rejected, someti
 \hypertarget{Doc}{%
 \chapter{Documenting R}\label{Doc}}
 
-The R language has a substantial body of documentation, much of which is contributed by various authors. The help files for R functions are written in `R documentation' (\texttt{.Rd}) file format. It is a simple markup language with close resemblance to LaTeX. The \texttt{.Rd} file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text.
+R has a substantial body of documentation, comprising help files for the core packages and a set of manuals aimed at users (An Introduction to R, R Data Import/Export), system administrators (R Installation and Administration) and developers (Writing R Extensions, The R language definition, and R Internals). This documentation was developed by the R Core Team with input from external contributors. The continuing involvement of the user community is important in maintaining this valuable documentation.
 
-This chapter describes the styleguide for R's documentation, how to document for R, report and review bugs (and/or suggest corrections for them) in the existing documentation. If you are interested in contributing to R's documentation, your contributions are more than welcome.
+The involvement of the community takes many forms, from contributing content, to making bug reports or raising an issue when the documentation could be more complete or made easier to follow.
 
-\hypertarget{introduction-2}{%
-\section{Introduction}\label{introduction-2}}
-
-R's documentation has long been considered to be good for a free programming language. The core developers have been committed to providing good documentation on the language and its packages. The continuing involvement of the user community in providing assistance for creating and maintaining documentation has also supported a lot.
-
-The involvement of the community takes many forms, from authoring to making bug reports or raising an issue when the documentation could be more complete or easier to use.
-
-This chapter is aimed at authors and potential authors of R documentation provided by the help files. More specifically, it is for people contributing to the standard documentation and for those developing additional documents using the same tools as the standard documents. Any time you feel that you can clarify and improve existing documentation or provide documentation that is missing, your contribution is welcome and appreciated. If you find it difficult to deal with the markup language, you can ask for help for that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out. However, not every good faith effort to change or extend the documentation will be accepted - sometimes the patch contribution might be incorrect, other times, while a change in wording may make some things clearer and easier to understand, other finer details of some corner case may become less clear, leading to the patch being declined or modified by the member of R Core reviewing it before applying it (if they agree the issue is important enough to fix).
+This chapter is about the ways people can contribute to R's documentation, with guidance on how to do that. Any time you feel that you can clarify or fill gaps in existing documentation, your contribution is welcome and appreciated. If you find it difficult to deal with the markup used in the source files, you can ask for help with that part too. Please do not let the material in this chapter stand between the documentation and your desire to help out. However, not every good faith effort to change or extend the documentation will be accepted - sometimes the suggested changes may be incorrect; other times, while a change in wording may make some things clearer and easier to understand, the finer details of some corner case may become less clear, leading to the suggested changes being declined or modified by a member of R Core before applying them (if they agree the issue is important enough to fix).
 
 \hypertarget{guidelines-for-writing-r-help-files}{%
 \section{Guidelines for writing R help files}\label{guidelines-for-writing-r-help-files}}
 
-This section summarises the \href{https://developer.r-project.org/Rds.html}{recommended style for writing the R help files}. The R help files are written in ``R documentation'' (Rd) format, a markup language which resembles LaTeX. An example of the \texttt{.Rd} format is available for \href{https://svn.r-project.org/R/trunk/src/library/base/man/mean\%60.Rd\%60}{mean\texttt{.Rd}}. These are intended for writing the core documentations but may also be useful for package writers. Extensive details of writing R documentation files can be found in the \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R Extensions} manual.
+The help files for R functions are written in `R documentation' (\texttt{.Rd}) file format. It is a simple markup language with close resemblance to LaTeX. The \texttt{.Rd} file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text. The \texttt{.Rd} files can be found in the \texttt{man} directory of the sources for the corresponding base package, for example \url{https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd}. Many authors of contributed R packages use the \href{https://cran.r-project.org/package=roxygen2}{roxygen2} package to write documentation, which generates \texttt{.Rd} files from comments in the package \texttt{.R} files. However, the help files in the base distribution are maintained by directly editing the \texttt{.Rd} files.
 
-Note: Many R package authors use the R package \href{https://cran.r-project.org/web/packages/roxygen2/index.html}{roxygen2} to write documentation (which eventually creates the \texttt{.Rd} files), however, in this guide we focus on \texttt{.Rd} files only because the manual pages for the base distribution are written directly as \texttt{.Rd} files.
+This section gives an overview of the \texttt{.Rd} format and summarises the \href{https://developer.r-project.org/Rds.html}{guidelines for writing the R help files}. The guidelines are intended for contributors to base R, but may also be useful for authors of contributed packages. Full documentation on writing R documentation files can be found in the \href{https://cran.r-project.org/doc/manuals/r-release/R-exts.html\#Writing-R-documentation-files}{Writing R Extensions} manual.
 
 There are three main parts of an \texttt{.Rd} file:
 
