--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -574,8 +574,8 @@ This section will be added after the official \href{https://cran.r-project.org/d
   \href{https://cran.r-project.org/doc/FAQ/R-FAQ.html}{R FAQ}
 \end{enumerate}
 
-\hypertarget{BugTrack}{%
-\chapter{Bug Tracking}\label{BugTrack}}
+\hypertarget{ReportingBugs}{%
+\chapter{Reporting Bugs}\label{ReportingBugs}}
 
 \hypertarget{what-is-a-bug-in-r}{%
 \section{What is a bug in R?}\label{what-is-a-bug-in-r}}
@@ -652,19 +652,6 @@ The first step before filing a bug report is to see whether the problem has alre
 \end{enumerate}
 
 The sections that follow discuss where to check whether a bug is already reported.
-
-\hypertarget{levels-of-contributing-to-bug-what-do-you-do-when-you-find-a-bug}{%
-\section{Levels of contributing to bug / What do you do when you find a bug?}\label{levels-of-contributing-to-bug-what-do-you-do-when-you-find-a-bug}}
-
-\begin{enumerate}
-\def\labelenumi{\arabic{enumi}.}
-\item
-  \protect\hyperlink{ReportBug}{Report} the bug (if it is not already reported).
-\item
-  \href{}{Test} the bug.
-\item
-  \protect\hyperlink{FixBug}{Fix} the bug: Fixing a bug might require relatively more time. You may start a conversation about it on \href{https://bugs.r-project.org/bugzilla/index.cgi}{BugZilla}. This would require engagement with the R Core Team.
-\end{enumerate}
 
 \hypertarget{what-are-some-places-where-you-may-find-a-bug}{%
 \section{What are some places where you may find a bug?}\label{what-are-some-places-where-you-may-find-a-bug}}
